2013-09-30  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/sed.texi (Regular Expressions): Typo: implicity numbered ->
	implicitly numbered.
	Reported by Arthur Budco.

2013-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/sed-in.texi (Extended regexps): Add an example on using | in
	extended regular expressions.  Suggested by Nils Barth.

2013-02-02  Jose E. Marchesi  <jemarch@gnu.org>

	* gnulib: Update.
	* configure.ac (COPYRIGHT_YEAR): Updated to 2013.

2012-12-29  Stefano Lattarini  <stefano.lattarini@gnu.org>  (tiny change)

	testsuite: make test logs more verbose
	* testsuite/runtest: Adjust and simplify.

2012-12-29  Stefano Lattarini  <stefano.lattarini@gnu.org>  (tiny change)

	maint: enable Automake parallel testsuite harness
	It is better than the older test driver.  It is also the
	default now, starting from Automake 1.13; so having it
	enabled unconditionally will allow GNU sed to be seamlessly
	bootstrapped by Automake 1.13.
	* configure.ac (AM_INIT_AUTOMAKE): Add 'parallel-tests' option.
	Also require Automake 1.11.1, since that is the minimal version
	to have a sane 'parallel-tests' support.
	(AC_PREREQ): Bump requirement to 2.62, since that is the
	minimal version required by Automake 1.11.1.
	* testsuite/Makefile.am (TESTS_ENVIRONMENT): Remove the
	invocation for the test runner "$(srcdir)/runtest"; it's
	correct place is ...
	(LOG_COMPILER): ... here.

2012-12-29  Stefano Lattarini  <stefano.lattarini@gnu.org>  (tiny change)

	build: avoid bootstrap failure
	* bootstrap.conf (gnulib_modules): Add 'threadlib'.

2012-12-21  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Bump version number.  Replace COPYRIGHT_YEAR.
	* Makefile.am (dist-hook): Revert 2010-08-10 change.

2012-12-21  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Rename to bootstrap.
	* autoboot.conf: Rename to bootstrap.conf.
	* README.boot: Remove.
	* Makefile.am: Remove README.boot, add bootstrap and bootstrap.conf.

2012-12-21  Paolo Bonzini  <bonzini@gnu.org>
