@@ -1,6 +1,6 @@
 # Bootstrap configuration.
 
-# Copyright (C) 2006-2008 Free Software Foundation, Inc.
+# Copyright (C) 2006-2013 Free Software Foundation, Inc.
 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc c-ctype extensions fwriting getdelim getopt gettext-h
-    localcharset mbrlen mbrtowc mbsinit memchr mkostemp obstack pathmax regex
+    localcharset mbrlen mbrtowc mbsinit memchr mkostemp obstack regex
     rename selinux-h stdbool stat-macros ssize_t strerror strverscmp threadlib
     unlocked-io verify version-etc-fsf wcrtomb wctob"
 
